Modified links in /Home/Index and /Account/Register.

--- a/Gobot/Gobot/Views/Account/Register.cshtml
+++ b/Gobot/Gobot/Views/Account/Register.cshtml
@@ -28,9 +28,9 @@
         @Html.EditorFor(model => model.Username)
         @Html.ValidationMessageFor(model => model.Username)
 
-        @Html.LabelFor(model => model.email)
-        @Html.EditorFor(model => model.email)
-        @Html.ValidationMessageFor(model => model.email)
+        @Html.LabelFor(model => model.Email)
+        @Html.EditorFor(model => model.Email)
+        @Html.ValidationMessageFor(model => model.Email)
 
         @Html.LabelFor(model => model.Password)
         @Html.EditorFor(model => model.Password)
