--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <div id="sub">
             <h1>VOUS ÊTES DÉCONNECTÉS.</h1>
             <h2>
-                Connectez-vous pour profiter de tout les fonctionnalités de Gobot. Si vous n'avez pas de compte, <a href="#">créez-le</a>, ça prend moins d'une minute et c'est gratuit!
+                Connectez-vous pour profiter de tout les fonctionnalités de Gobot. Si vous n'avez pas de compte, <a href="@Url.Action("Register", "Account")">créez-le</a>, ça prend moins d'une minute et c'est gratuit!
             </h2>
             <a href="@Url.Action("Register", "Account")">S'INSCRIRE</a>
             <div class="separator">
