Continued styling for /Account/Register.

--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -10,6 +10,7 @@ $menuColor_active_borderTop: #cc5644;
 $menuColor_active_borderRight: #a84739;
 $menuColor_Ink: #a74232;
 
+$darkerGrey: #1f1f1f;
 $darkGrey: #323232;
 $grey: #626262;
 $green: #51c24b;
