--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div id="video">
-            <iframe src="https://player.twitch.tv/?channel=esl_csgo" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+            <iframe src="https://player.twitch.tv/?channel=gobotts" frameborder="0" scrolling="no" height="378" width="620"></iframe>
         </div>
         <div class="side t">
             <img src="~/Images/t_side.png" />
