--- a/Gobot/Gobot/Content/Register.scss
+++ b/Gobot/Gobot/Content/Register.scss
@@ -1,4 +1,147 @@
 ﻿@import 'global';
 
-label { color: white !important; }
-input { color: black !important; }
+label { color: white !important; } // TEMP
+input { color: black !important; } // TEMP
+body, html { height: 100% !important; }
+
+#back {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: auto;
+    background-color: $darkerGrey;
+    margin: 15px;
+    @include box-shadow(2px 2px 14px -2px);
+    cursor: pointer;
+
+    > a {
+        display: block;
+        font: italic 900 24px $font;
+        color: $grey;
+        text-transform: uppercase;
+        padding: 15px 20px;
+        
+        > img {
+            position: relative;
+            width: 18px;
+            height: auto;
+            margin-right: 10px;
+        }
+    }
+
+}
+    #back:hover > a{color: $off-white; transition: 0.3s; }
+
+form {
+    position: relative;
+    width: auto;
+    height: auto;
+    max-width: 400px;
+    background-color: $darkerGrey;
+    @include box-shadow(2px 2px 14px -2px);
+    margin: 15px auto 90px auto;
+    padding: 50px 6% 120px 6%;
+
+    > img {
+        position: relative;
+        width: 55%;
+        margin: 0 22.5% 30px 22.5%;
+    }
+    
+    > input:not([type=submit]) {
+        width: 100%;
+        font: 400 22px $font;
+        padding: 15px 0;
+        background-color: $darkerGrey;
+        border: 1px solid $darkGrey;
+        color: $off-white !important;
+        text-indent: 15px;
+    }
+
+    > label {
+        display: block;
+        width: 100%;
+        font: italic 900 24px $font;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        margin-top: 20px;
+        color: $grey !important;
+    }
+}
+
+$d: 140px;
+.go {
+    position: absolute;
+    display: block;
+    width: $d;
+    height: $d;
+    cursor: pointer;
+    border-radius: 50%;
+    bottom: -$d /2 ;
+    background-color: $menuColor;
+    @include box-shadow(2px 2px 14px -2px);
+        
+
+    > input {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+    > img {
+        position: absolute;
+        margin: 30%;
+        width: 40%;
+        height: 40%;
+    }
+}
+
+/* entire container, keeps perspective */
+.flip-container {
+    position: absolute;
+    bottom: -$d / 2 !important;
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: $d;
+	height: $d;
+    border-radius: 50%;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
