--- a/Gobot/Gobot/Content/Register.scss
+++ b/Gobot/Gobot/Content/Register.scss
@@ -1,7 +1,5 @@
 ﻿@import 'global';
 
-label { color: white !important; } // TEMP
-input { color: black !important; } // TEMP
 body, html { height: 100% !important; }
 
 #back {
@@ -14,6 +12,7 @@ body, html { height: 100% !important; }
     margin: 15px;
     @include box-shadow(2px 2px 14px -2px);
     cursor: pointer;
+    z-index: 999;
 
     > a {
         display: block;
@@ -55,7 +54,7 @@ form {
         padding: 15px 0;
         background-color: $darkerGrey;
         border: 1px solid $darkGrey;
-        color: $off-white !important;
+        color: $off-white;
         text-indent: 15px;
     }
 
@@ -66,7 +65,7 @@ form {
         text-transform: uppercase;
         margin-bottom: 5px;
         margin-top: 20px;
-        color: $grey !important;
+        color: $grey;
     }
 }
 
@@ -83,7 +82,7 @@ $d: 140px;
     @include box-shadow(2px 2px 14px -2px);
         
 
-    > input {
+    > input, > div {
         position: absolute;
         width: 100%;
         height: 100%;
