--- a/Gobot/Gobot/Content/Register.css
+++ b/Gobot/Gobot/Content/Register.css
@@ -53,6 +53,68 @@ img {
 .white {
   color: white; }
 
+#error_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+  background-color: #141414;
+  z-index: 9999; }
+  #error_overlay > div {
+    position: relative;
+    width: 50%;
+    margin: 40px 25%; }
+    #error_overlay > div > #error_overlay_image {
+      display: block;
+      position: relative;
+      width: 220px;
+      height: 220px;
+      margin-left: calc(50% - 220px / 2);
+      background: #963434 no-repeat center/55% url("/Images/close.png");
+      border-radius: 50%; }
+    #error_overlay > div > h1, #error_overlay > div > a, #error_overlay > div > button {
+      display: block !important;
+      text-align: center;
+      font: italic 400 36px Lato, Arial, sans-serif; }
+    #error_overlay > div > h1 {
+      color: #eeeeee;
+      width: 80% !important;
+      margin-left: 10%; }
+    #error_overlay > div > a, #error_overlay > div > button {
+      width: 60% !important;
+      margin-left: 20%;
+      margin-top: 50px !important;
+      position: relative;
+      color: #626262;
+      border: 1px solid #323232;
+      padding: 15px 0; }
+    #error_overlay > div > a:hover, #error_overlay > div > button:hover {
+      color: #eeeeee;
+      border-color: #eeeeee; }
+
+@media screen and (max-width: 1200px) {
+  #error_overlay > div {
+    width: 75%;
+    margin: 40px 12.5%; }
+    #error_overlay > div > h1, #error_overlay > div > a {
+      font-size: 30px !important; } }
+
+@media screen and (max-width: 600px) {
+  #error_overlay > div {
+    margin-top: 80px !important;
+    width: 100%;
+    margin: 20px 0; }
+    #error_overlay > div > h1, #error_overlay > div > a, #error_overlay > div > button {
+      font-size: 20px !important; }
+    #error_overlay > div > a, #error_overlay > div > button {
+      margin-top: 20px !important; }
+    #error_overlay > div > div {
+      width: 120px !important;
+      height: 120px !important;
+      margin-left: calc(50% - 120px /2) !important; } }
+
 body, html {
   height: 100% !important; }
 
