--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -17,6 +17,13 @@
     @Styles.Render("~/Content/Home.min.css")
 </head>
 <body>
+    <noscript id="error_overlay">
+        <div>
+            <div id="error_overlay_image"></div>
+            <h1>Gobot nécéssite Javascript pour fonctionner corretement. Veuillez l'activer pour pouvoir profiter du contenu de Gobot.com.</h1>
+            <a href="http://enable-javascript.com/fr/" target="_blank">Comment activer mon Javascript?</a>
+        </div>
+    </noscript>
     <div id="header">
         <div id="sub">
             <h1>VOUS ÊTES DÉCONNECTÉS.</h1>
